crates/ssa-workflow-derive/tests/ui/canonical_encode/enum_discriminant.stderr
error: CanonicalEncode unit enum discriminants are not supported; variants encode by declaration order
 --> tests/ui/canonical_encode/enum_discriminant.rs:5:9
  |
5 |     A = 1,
  |         ^
